--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -2061,6 +2061,21 @@ footer .footer_bottom {
     padding: 0;
     border-radius: 0;
 }
+.ui-dialog .ui-dialog-buttonpane {
+    padding: 0;
+    margin: 0;
+    border: none;
+    position: absolute;
+    top: 1em;
+    right: 1em;
+}
+.ui-dialog .ui-dialog-buttonpane button {
+    width: 20px;
+    height: 20px;
+    margin: 0;
+    text-indent: -9999px;
+    background: url(../images/ico/btn_close.png) no-repeat center;
+}
 .ui-dialog .quick_dialog {
     min-width: 420px;
     margin: -3px;
@@ -2206,6 +2221,29 @@ footer .footer_bottom {
 	font-family: 'scoredream', sans-serif;
     font-size: 20px;
     font-weight: 500;
+}
+/* 쪽지보내기 팝업 */
+.ui-dialog .note_dialog {
+    width: 900px !important;
+    padding: 40px;
+    box-sizing: border-box;
+    border-radius: 3px;
+}
+.note_dialog .tit_box h3 {
+    padding: 0 0 40px;
+}
+.note_dialog .btn_box_group {
+    justify-content: flex-end;
+    margin-top: 20px;
+}
+.note_dialog .btn_box_group .btn_box {
+    flex: none;
+    width: 105px;
+}
+.note_dialog .btn_box_group .btn_box * {
+    padding: 5px 0;
+    font-size: 15px;
+    color: #fff;
 }
 
 /* ============================================================
@@ -2987,6 +3025,19 @@ footer .footer_bottom {
     }
     .comu_calendar .btn_box_group .btn_box a {
         padding: 15px 0;
+    }
+
+    /* 팝업 */
+    .ui-dialog {
+        height: calc(100vh - 65px) !important;
+        bottom: 0 !important;
+        top: inherit !important;
+        border-radius: 20px 20px 0 0;
+        overflow-y: auto;
+    }
+    .ui-dialog .note_dialog {
+        width: 100% !important;
+        padding: 15px 20px;
     }
 
     /* footer */
