--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -911,6 +911,19 @@ header.headerfix .header_bottom ul li a::before {
     color: #666;
 }
 
+/* VC 근무경력 확인 */
+.content_list_box + .btn_box_group.type_01.left {
+    padding-left: 20px;
+}
+.content_list_box + .btn_box_group.type_01.left .btn_box {
+    width: auto;
+}
+.content_list_box + .btn_box_group.type_01.left .btn_box * {
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: 500;
+}
+
 /* 커뮤니티 */
 .community_main_btn {
     display: flex;
@@ -2140,6 +2153,10 @@ footer .footer_bottom {
     position: fixed;
     padding: 0;
     border-radius: 0;
+    background-color: transparent;
+}
+.ui-widget.ui-widget-content {
+    border: none;
 }
 .ui-dialog .ui-dialog-buttonpane {
     padding: 0;
@@ -2158,11 +2175,11 @@ footer .footer_bottom {
 }
 .ui-dialog .quick_dialog {
     min-width: 420px;
-    margin: -3px;
     padding: 20px;
     box-sizing: border-box;
     border: 3px solid #8abbfb;
     border-radius: 3px;
+    background-color: #fff;
 }
 .ui-dialog .quick_dialog + .ui-dialog-buttonpane {
     position: static;
@@ -2314,6 +2331,7 @@ footer .footer_bottom {
     padding: 40px;
     box-sizing: border-box;
     border-radius: 3px;
+    background-color: #fff;
 }
 .note_dialog .btn_box_group {
     justify-content: flex-end;
@@ -2327,6 +2345,65 @@ footer .footer_bottom {
     padding: 5px 0;
     font-size: 15px;
     color: #fff;
+}
+/* 경고팝업 */
+.ui-dialog .ui-dialog-content.alpop_box {
+    padding: 30px;
+    border-radius: 10px;
+    border: 3px solid #8abbfb;
+    box-sizing: border-box;
+    background-color: #fff;
+    width: 460px !important;
+}
+.alpop_box .pop_header {
+    display: flex;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #d7d7d7;
+}
+.alpop_box .pop_header .img1 {
+    display: flex;
+    width: 100%;
+    height: 50px;
+    background: url(../images/ico/ico_alpop_header_01.png) no-repeat center;
+}
+.alpop_box .pop_header .img2 {
+    display: flex;
+    width: 100%;
+    height: 50px;
+    background: url(../images/ico/ico_alpop_header_02.png) no-repeat center;
+}
+.alpop_box .pop_header .img3 {
+    display: flex;
+    width: 100%;
+    height: 50px;
+    background: url(../images/ico/ico_alpop_header_03.png) no-repeat center;
+}
+.alpop_box .pop_content {
+    padding: 20px 0;
+    font-size: 15px;
+    text-align: center;
+}
+.alpop_box .pop_footer .btn_box {
+    justify-content: center;
+    width: auto;
+    flex: none;
+    gap: 10px;
+}
+.alpop_box .pop_footer .btn_box * {
+    width: auto;
+    flex: none;
+    padding: 5px 30px;
+    font-size: 14px;
+    font-weight: 500;
+}
+.alpop_box + .ui-dialog-buttonpane button {
+    background-image: url(../images/ico/ico_alpop_close.png);
+}
+.ui-widget input,
+.ui-widget select,
+.ui-widget textarea,
+.ui-widget button {
+    font-family: 'scoredream', sans-serif;
 }
 
 /* ============================================================
@@ -2838,6 +2915,12 @@ footer .footer_bottom {
         padding: 15px 0;
     }
 
+    /* VC 근무경력 확인 */
+    .content_list_box + .btn_box_group.type_01.left {
+        padding-left: 15px;
+        flex-direction: column;
+    }
+
     /* 커뮤니티 */
     .tbl_longcard > ul > li > a .tit span {
         font-size: 12px;
@@ -3143,10 +3226,24 @@ footer .footer_bottom {
         top: inherit !important;
         border-radius: 20px 20px 0 0;
         overflow-y: auto;
+        background-color: #fff;
     }
     .ui-dialog .note_dialog {
         width: 100% !important;
         padding: 15px 20px;
+    }
+    /* 경고팝업 */
+    .ui-dialog .ui-dialog-content.alpop_box {
+        padding: 50px 15px 0;
+        border: none;
+        width: 100vw !important;
+    }
+    .alpop_box .pop_content {
+        padding: 30px 0 50px;
+    }
+    .alpop_box .pop_footer .btn_box * {
+        flex: 1;
+        padding: 10px 0;
     }
 
     /* footer */
@@ -3170,7 +3267,8 @@ footer .footer_bottom {
         font-size: 15px;
     }
     .footer_bottom .tel_num {
-        gap: 10px;
+        gap: 5px;
+        flex-direction: column;
     }
     .familysite_box {
         display: none;
